--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -169,12 +169,13 @@ header {
 
 .main-nav li a:link,
 .main-nav li a:visited {
-    
+    padding: 8px 0; /* top and bottom 8px ,left and right 0px ,- razmak izmedju likova i crte ispod*/
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 90%; /*font size baza je 20px ,sve drugo radimo u % */
-    border-bottom: 2px solid transparent;
+    border-bottom: 10px solid transparent ; /* transparent sakriva border bottom 2px je debljina crte kad nije transparent */
+    transition: ;border-bottom: 2s;
 }
 
 .main-nav li a:hover,
